add about section 'main section one'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personal</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/2e1501671e.js" crossorigin="anonymous"></script>
 </head>
 <body class="roboto-font">
     <header class="header">
@@ -24,13 +25,22 @@
                     <button class="btn" type="button">Hire me</button>
                 </div>
             </div>
-            <div class="img-area">
                 <img src="images/do not use this pic.png" alt="">
-            </div>
         </section>
     </header>
     <main>
-
+        <section class="section-one">
+            <div class="image-are">
+                <img src="images/do not use this pic2.png" alt="">
+            </div>
+            <div class="title-are">
+                <h1>ABOUT</h1>
+                <p class="color">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <div class="btn-are">
+                    <button class="btn" type="button"><i class="fa-solid fa-download"></i> Download CV</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
