add card contain 'main section two'

--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
                 </div>
             </div>
         </section>
+        <section class="section-two">
+            <h1>LASTET WORKING PROJECT</h1>
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/image 4.png" alt="">
+                    <h3 class="color">Hard Rock Music</h3>
+                    <p class="color">Lorem Ipsum is simply dummy text of theprinting and typesetting industry.</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 5.png" alt="">
+                    <h3 class="color">Power-x-gym (gym website)</h3>
+                    <p class="color">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 8.png" alt="">
+                    <h3 class="color">Creative Agency</h3>
+                    <p class="color">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
