--- a/index.html
+++ b/index.html
@@ -62,8 +62,22 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="Work-Inquiry">
+            <h1>WORK INQUIRY</h1>
+            <div class="btn-are">
+                <button class="btn" type="button">Lats Chat</button>
+            </div>
+        </div>
+        <div class="Stay-connected">
+            <span class="color">Stay connected</span>
+            <h3 class="color">hello@design.com</h3>
+            <div class="icon">
+                <img src="icons/Group 33059.png" alt="">
+                <img src="icons/image 6.png" alt="">
+                <img src="icons/image 7.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
